finally, fixed the glitch where the X didnt show on mobiles

--- a/styles/tablet-style.scss
+++ b/styles/tablet-style.scss
@@ -1,4 +1,7 @@
 @media (max-width:768px){
+    .fixed-social{
+        display: none;
+    }
     header{
         justify-content: flex-end;
         nav{
@@ -6,7 +9,7 @@
             height: 100vh;
             width: 100%;
             position: absolute;
-            // top: 0;
+            top: 0;
             right: 0;
             bottom: 0;
             left: -100%;
@@ -18,7 +21,7 @@
                 justify-content: flex-end;
                 align-items: center;
                 padding:0px 30px 0px 30px;
-                background-color: violet;
+                // background-color: violet;
                 cursor: pointer;
             }
             ul {
@@ -27,8 +30,8 @@
                     font-size: 20px;
                     float: none;
                     text-align: center;
-                    height: 70px;
-                    line-height: 70px;
+                    height: 80px;
+                    line-height: 80px;
                 }
             }
         }
